27_matrix_input/grade.txt
Grading at Wed 15 Nov 2023 05:27:06 AM UTC
Attempting to compile rotateMatrix.c
rotateMatrix.c: In function ‘main’:
rotateMatrix.c:73:10: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   73 |    while(c=fgetc(f)!=EOF)
      |          ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
